[package]
name = "hoplitekb-wasm-rs"
version = "0.3.3"
authors = ["jeremymarch <jmarch@gradcenter.cuny.edu>"]
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.83"
polytonic-greek = { git = "https://github.com/jeremymarch/polytonic-greek", default-features = false, version = "0.4.6" }
# polytonic-greek = { path = "../polytonic-greek", default-features = false }

[features]
default = ["hgk_convert", "hgk_strip", "hgk_compare"]
hgk_convert = []
hgk_strip = []
hgk_compare = []

[lib]
crate-type =["cdylib"]

[profile.release]
lto = true
opt-level = "z"
