[package]
name = "hoplitekb-wasm-rs"
version = "0.4.0"
authors = ["jeremymarch <jmarch@gradcenter.cuny.edu>"]
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.88"
polytonic-greek = { git = "https://github.com/jeremymarch/polytonic-greek", default-features = false, version = "0.5.0" }
# polytonic-greek = { path = "../polytonic-greek", default-features = false }

[features]
default = ["hgk_convert", "hgk_strip", "hgk_compare", "hgk_compare_multiple_forms"]
hgk_convert = []
hgk_strip = []
hgk_compare = []
hgk_compare_multiple_forms = []

[lib]
crate-type =["cdylib"]

[profile.release]
lto = true
opt-level = "z"
